--- a/public/themes/custom/julkaisut/assets/styles/gutenberg/global.scss
+++ b/public/themes/custom/julkaisut/assets/styles/gutenberg/global.scss
@@ -59,6 +59,8 @@ $palette-colors-light:
 @each $name in $palette-colors-dark {
   .has-#{$name}-background-color {
     color: var(--color-white);
+
+    --button-background: var(--color-white);
   }
 }
 
